# dgsdk_node_wrapper

./: .gitignore  .npmignore  CMakeLists.txt  README.md  debug.js  notes.txt  package.json  tsconfig.json
js_src/: index.ts  types.ts
lib/: index.js  types.js
src/: main.cpp  utils.cpp  utils.h
test/: test.js
